# midna

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/templates/: README.md  adr.md  design-doc.md
.github/workflows/: auto-assign.yml
docs/: ubiquitous-language.md
docs/adr/: 0001-use-rust.md  0002-offline-first-with-browsing-exception.md  0003-provider-abstraction-from-v0.md  README.md
docs/design/: midna_design_doc_v0_1.md
docs/templates/: README.md  adr.md  design-doc.md
src/: cli.rs  error.rs  lib.rs  main.rs  permissions.rs  session.rs
src/modes/: chat.rs
src/providers/: mod.rs  ollama.rs
tests/: ollama_provider.rs
