[package]
name = "midna"
version = "0.1.0"
edition = "2021"
description = "Local-first AI agent that talks to a local LLM runtime (Ollama)."
license = "MIT"
authors = ["kenshin-morioka <kenshin.morioka@dely.jp>"]
readme = "README.md"
repository = "https://github.com/kenshin-morioka/midna"

[[bin]]
name = "midna"
path = "src/main.rs"

[lib]
name = "midna"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
